--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -1,28 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
-
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
     <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:gravity="right"
+        android:orientation="horizontal">
+    <TextView
+        android:id="@+id/tentativi0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tentativi" />
+    <TextView
+        android:id="@+id/tentativi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+      />
+    </LinearLayout>
+    <FrameLayout
         android:id="@+id/board"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-    </LinearLayout>
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/buttons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
+        android:layout_below="@id/board"
 
-        android:layout_alignParentStart="true"
         android:orientation="vertical">
+
+
+       Tentativi: <TextView
+            android:id="@+id/tentativi1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tentativi" />
 
 
         <LinearLayout
@@ -47,5 +67,5 @@
 
 
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
 
