--- a/app/src/main/res/menu/game_menu.xml
+++ b/app/src/main/res/menu/game_menu.xml
@@ -34,6 +34,11 @@
                 android:showAsAction="ifRoom"
                 android:title="@string/size8"
                 tools:ignore="AppCompatResource" />
+            <item
+            android:id="@+id/preview"
+            android:showAsAction="ifRoom"
+            android:title="@string/preview"
+            tools:ignore="AppCompatResource" />
         </menu>
     </item>
 
