--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -10,6 +10,18 @@
 
 
     <TextView
+        android:id="@+id/tentativi2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/tentativi"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/board" />
+
+    <TextView
         android:id="@+id/tentativi"
         android:layout_width="74dp"
         android:layout_height="16dp"
@@ -33,8 +45,8 @@
         android:id="@+id/cleanAll"
         android:layout_width="94dp"
         android:layout_height="44dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
         android:text="Nuovo"
         app:layout_constraintStart_toEndOf="@+id/solve"
         app:layout_constraintTop_toBottomOf="@+id/tentativi" />
@@ -43,6 +55,7 @@
         android:id="@+id/solve"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
+        android:layout_marginTop="8dp"
         android:text="Risolvi"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tentativi0" />
@@ -70,6 +83,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/board" />
 
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="74dp"
+        android:layout_height="16dp"
+
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toEndOf="@+id/times"
+        app:layout_constraintTop_toBottomOf="@+id/coppie" />
+
+    <TextView
+        android:id="@+id/times"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/time"
+        app:layout_constraintStart_toEndOf="@+id/cleanAll"
+        app:layout_constraintTop_toBottomOf="@+id/coppieval" />
     <TextView
         android:id="@+id/coppieval"
         android:layout_width="wrap_content"
